<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Challenge13</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="edit_text_relative_1_hint">Relative</string>
    <string name="edit_text_adjective_1_hint">Adjective</string>
    <string name="edit_text_adjective_2_hint">Adjective</string>
    <string name="edit_text_name_in_room_hint">Name of person in room</string>
    <string name="edit_text_adjective_3_hint">Adjective</string>
    <string name="edit_text_verb_ed_hint">Verb ending in \"ed\"</string>
    <string name="edit_text_body_part_hint">Body part</string>
    <string name="edit_text_verb_ing_hint">Verb ending in \"ing\"</string>
    <string name="edit_text_relative_2_hint">Relative</string>
    <string name="edit_text_name_hint">Name</string>
    <string name="button_show_me_label">Show me!</string>
    <string name="title_activity_result">ResultActivity</string>
    <string name="title_activity_main_fragment">MainFragmentActivity</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
