<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:orientation="vertical">


    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edit_text_relative_1"
        android:layout_weight="1"
        android:hint="@string/edit_text_relative_1_hint" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edit_text_adjective_1"
        android:layout_weight="1"
        android:hint="@string/edit_text_adjective_1_hint" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edit_text_adjective_2"
        android:layout_weight="1"
        android:hint="@string/edit_text_adjective_2_hint" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edit_text_name_in_room"
        android:layout_gravity="center_horizontal"
        android:layout_weight="1"
        android:hint="@string/edit_text_name_in_room_hint" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edit_text_adjective_3"
        android:layout_weight="1"
        android:hint="@string/edit_text_adjective_3_hint" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edit_text_verb_ed"
        android:layout_gravity="right"
        android:layout_weight="1"
        android:hint="@string/edit_text_verb_ed_hint" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edit_text_body_part"
        android:layout_weight="1"
        android:hint="@string/edit_text_body_part_hint" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edit_text_verb_ing"
        android:layout_weight="1"
        android:hint="@string/edit_text_verb_ing_hint" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edit_text_relative_2"
        android:layout_weight="1"
        android:hint="@string/edit_text_relative_2_hint" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edit_text_name"
        android:layout_gravity="center_horizontal"
        android:layout_weight="1"
        android:hint="@string/edit_text_name_hint" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_show_me_label"
        android:id="@+id/button_show_me"
        android:layout_weight="1"
        android:layout_gravity="center_horizontal" />

</LinearLayout>
